[gd_scene load_steps=2 format=3 uid="uid://d1btdy1brmsea"]

[ext_resource type="Script" path="res://scripts/player/player_debug.gd" id="1_jmchc"]

[node name="PlayerDebug" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jmchc")

[node name="Debug" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="MonitorsContainer" type="VBoxContainer" parent="Debug"]
layout_mode = 1
offset_right = 400.0
offset_bottom = 500.0
scale = Vector2(0.5, 0.5)

[node name="Fps" type="Panel" parent="Debug/MonitorsContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="Label" type="Label" parent="Debug/MonitorsContainer/Fps"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "FPS"
vertical_alignment = 1

[node name="State" type="Panel" parent="Debug/MonitorsContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="Label" type="Label" parent="Debug/MonitorsContainer/State"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "State"
vertical_alignment = 1

[node name="Speed" type="Panel" parent="Debug/MonitorsContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="Label" type="Label" parent="Debug/MonitorsContainer/Speed"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "SPEED"
vertical_alignment = 1

[node name="PosDelta" type="Panel" parent="Debug/MonitorsContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="Label" type="Label" parent="Debug/MonitorsContainer/PosDelta"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "PosDelta"
vertical_alignment = 1

[node name="FloorAngle" type="Panel" parent="Debug/MonitorsContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="Label" type="Label" parent="Debug/MonitorsContainer/FloorAngle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "WallAngle
"
vertical_alignment = 1

[node name="WallAngle" type="Panel" parent="Debug/MonitorsContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="Label" type="Label" parent="Debug/MonitorsContainer/WallAngle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "JBIsStopped"
vertical_alignment = 1

[node name="JumpBufferIsStopped" type="Panel" parent="Debug/MonitorsContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="Label" type="Label" parent="Debug/MonitorsContainer/JumpBufferIsStopped"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "JBIsStopped"
vertical_alignment = 1
